--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eco-Guardians: The Elemental Quest</title>
-    <meta name="description" content="A magical gamified environmental education app where young guardians restore Terra Nova through eco-challenges, mini-games, and real-world environmental actions." />
+    <title>Terra-Tots: Nature's Little Helpers!</title>
+    <meta name="description" content="A cheerful, kid-friendly environmental education app where little nature helpers learn about the environment through fun games, friendly characters, and real-world eco-adventures!" />
     <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="70408cb4-de3d-4b9d-b836-eade93816dd1" />
